form déplacement marche!!!

--- a/client/src/app/edition/edition.component.css
+++ b/client/src/app/edition/edition.component.css
@@ -90,6 +90,12 @@
     
         @page {
             margin: 0.5cm;
+            size: A4;
             }
             
+    #edit-form-container{
+      width:100% !important;
+    }
+
+    
   }
