--- a/client/src/app/templates/form-deplacement/form-deplacement.component.html
+++ b/client/src/app/templates/form-deplacement/form-deplacement.component.html
@@ -238,4 +238,8 @@
             <p>Réservé au service des finances</p>
         </div>
 </div>
+
+<div id="annexe">
+    <app-annexe></app-annexe>
+</div>
     
