--- a/client/src/app/assignation/assignation.component.html
+++ b/client/src/app/assignation/assignation.component.html
@@ -18,8 +18,9 @@
           </mat-chip>
         </mat-chip-list>
         <br>
-    <button mat-mini-fab color="primary" id="addCollab"
-            (click)="openDialog()">+</button>
+    <div id="collab">Ajouter un collaborateur
+      <button mat-mini-fab color="primary" id="addCollab" (click)="openDialog()">+</button>
+    </div>
     <br>
     <app-file-uploader></app-file-uploader>
     <br>
