--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -51,10 +51,10 @@
       </mat-form-field>
     </div>
 
-    <button mat-icon-button (click)="search()">
+    <button mat-icon-button (click)="search()" class="searchButton">
       <i class="material-icons">search</i>
     </button>
-    <button mat-icon-button (click)="desactivateSearch()">
+    <button mat-icon-button (click)="desactivateSearch()" class="searchButton">
       <i class="material-icons">backspace</i>
     </button>
 </div>
