--- a/client/src/app/templates/payment-form/paymentForm.component.css
+++ b/client/src/app/templates/payment-form/paymentForm.component.css
@@ -65,10 +65,12 @@ mat-form-field {
     width: 150px;
 }
 
+/*
 #entite-externe mat-form-field:last-child {
     width: 90px;
     margin: 0px 20px;
 }
+*/
 
 #beneficiaire-demandeur {
     display: flex;
@@ -98,11 +100,11 @@ mat-form-field {
 #form-date {
     background-color: #CCD4DF;
 }
-
+/*
 mat-select{
     width: 60px;
 }
-
+*/
 .totalFactureDevise {
     display: flex;
     flex-direction: row;
@@ -155,12 +157,12 @@ input {
 .nbFacture mat-form-field,
 .total,
 .total mat-form-field {
-    width: 100px;
+    width: 90%;
 }
 
 .refFact,
 .refFact mat-form-field {
-    width: 50px;
+    width: 90%;
 }
 
 .desc {
