améliorations print (et corrections formulaires)

--- a/client/src/app/edition/edition.component.css
+++ b/client/src/app/edition/edition.component.css
@@ -85,6 +85,8 @@
       visibility: visible;
       width:116%;
       margin:auto;
+      -webkit-print-color-adjust: exact;
+      /*color-adjust: exact;*/
     }
 
     
