--- a/client/src/app/templates/voyage-form/voyage-form.component.html
+++ b/client/src/app/templates/voyage-form/voyage-form.component.html
@@ -5,7 +5,7 @@
     <mat-form-field>
         <span matPrefix>P &nbsp;</span>
         <input matInput type="text" placeholder="EMPLOYÉ (matricule)"
-        formControlName="matricule">
+        formControlName="matricule" id="employe-matricule">
     </mat-form-field>
 </form>
     <br>
@@ -17,9 +17,9 @@
         <input matInput type="text" placeholder="FOURNISSEUR (numéro)"
         formControlName="numero">
     </mat-form-field> 
-    <mat-form-field>
+    <mat-form-field id="entite-adresse">
         <input matInput type="text" placeholder="Code adresse"
-        formControlName="adresse">
+        formControlName="adresse" >
     </mat-form-field>
 </form>
     </div>
