--- a/client/src/app/templates/voyage-form/voyage-form.component.html
+++ b/client/src/app/templates/voyage-form/voyage-form.component.html
@@ -237,7 +237,7 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         <tr mat-footer-row *matFooterRowDef="['total','addRow']"></tr>
     </table>
-    <p class="error_msg" *ngIf="fg_ventilation.hasError('incomplete')">Une ou plusieur lignes de ventilation sont incomplètes.</p>
+    <p class="error_msg" *ngIf="fg_ventilation.hasError('incomplete')">Une ou plusieurs lignes de ventilation sont incomplètes.</p>
     <p class="error_msg" *ngIf="fg_ventilation.hasError('negative')">La ventilation contient des montants négatifs.</p>
 </div>
 
