117: retroaction sur Demande d'achat

--- a/client/src/app/templates/aide-financiere-form/app.af-form.html
+++ b/client/src/app/templates/aide-financiere-form/app.af-form.html
@@ -202,7 +202,7 @@
       <tr mat-footer-row *matFooterRowDef="['total','addRow']"></tr>
     </table>
     <form [formGroup]="fg_ventilation">
-      <p class="error_msg" *ngIf="fg_ventilation.hasError('incomplete')">Une ou plusieur lignes de ventilation sont incomplètes.</p>
+      <p class="error_msg" *ngIf="fg_ventilation.hasError('incomplete')">Une ou plusieurs lignes de ventilation sont incomplètes.</p>
       <p class="error_msg" *ngIf="fg_ventilation.hasError('total')">Le total de la ventilation ne corresponds pas au montant spécifié plus haut.</p>
       <p class="error_msg" *ngIf="fg_ventilation.hasError('negative')">La ventilation contient des montants négatifs.</p>
     </form>
