--- a/client/src/app/templates/demande-achat/demande-achat.component.html
+++ b/client/src/app/templates/demande-achat/demande-achat.component.html
@@ -219,14 +219,14 @@
         <ng-container matColumnDef="quant">
           <th mat-header-cell *matHeaderCellDef> Quantité </th>
           <td mat-cell *matCellDef="let element">
-            <input [(ngModel)]="element.quant" (ngModelChange)="updateTotalItems()" type="number">
+            <input [(ngModel)]="element.quant" (ngModelChange)="updateTotalItems()" type="number" min=0>
           </td>
         </ng-container>
         <ng-container matColumnDef="prixUnit">
           <th mat-header-cell *matHeaderCellDef> Prix unitaire </th>
           <td mat-cell *matCellDef="let element"
               class="percentile">
-            <input [(ngModel)]="element.prixUnit" (ngModelChange)="updateTotalItems()" type="number">
+            <input [(ngModel)]="element.prixUnit" (ngModelChange)="updateTotalItems()" type="number" min=0>
           </td>
         </ng-container>
         <ng-container matColumnDef="totalItems">
@@ -257,6 +257,8 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumnsItems;"></tr>
         <tr mat-footer-row *matFooterRowDef="['total','addRow']"></tr>
       </table>
+      <p class="error_msg" *ngIf="fg_ventilation.hasError('incomplete')">Une ou plusieurs lignes d'items sont incomplètes.</p>
+      <p class="error_msg" *ngIf="fg_ventilation.hasError('negative')">La liste d'items contient des montants négatifs.</p>
       
       <mat-form-field class="ventilation_autres">
         <input matInput class="ventilation_autres" 
@@ -310,7 +312,7 @@
             <th mat-header-cell *matHeaderCellDef> Montant </th>
             <td mat-cell *matCellDef="let element">
               <input [(ngModel)]="element.montant" (ngModelChange)="updateTotal()"
-                     type="number">
+                     type="number" min=0>
             </td>
           </ng-container>
           <ng-container matColumnDef="action">
@@ -335,6 +337,8 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumnsVentilation;"></tr>
           <tr mat-footer-row *matFooterRowDef="['total','addRow']"></tr>
         </table>
+        <p class="error_msg" *ngIf="fg_ventilation.hasError('incomplete')">Une ou plusieurs lignes de ventilation sont incomplètes.</p>
+        <p class="error_msg" *ngIf="fg_ventilation.hasError('negative')">La ventilation contient des montants négatifs.</p>
     </div>
 </div>
     <!-- Commentaires et precision -->
